# hesai_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: gz_bridge.yaml
config/rviz/: display_urdf.rviz
launch/: description.launch.py  gz_bridge.launch.py  load.launch  simulate.launch.py  view_urdf.launch  visualize.launch.py
meshes/visual/: qt64.dae
rviz/: model.rviz
urdf/: gazebo.urdf.xacro  gazebo.xacro  hesai.urdf.xacro  hesai_qt64.urdf.xacro  hesai_qt64_standalone.urdf.xacro  hesai_standalone.urdf  hesai_standalone.urdf.xacro  hesai_xt32.urdf.xacro  hesai_xt32_standalone.urdf.xacro
urdf/meshes/: PandarQT64_model_original_from_step.dae  PandarXT_Model.dae
