<?xml version="1.0"?>
<package format="2">
  <name>hesai_description</name>
  <version>0.0.1</version>
  <description>URDF model of the Hesai PandarXT-32</description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
